--- a/manifests/alertmanager-alertmanager.yaml
+++ b/manifests/alertmanager-alertmanager.yaml
@@ -10,6 +10,7 @@ metadata:
   name: main
   namespace: monitoring
 spec:
+  alertmanagerConfigNamespaceSelector: {}
   alertmanagerConfigSelector: {}
   image: quay.io/prometheus/alertmanager:v0.29.0
   nodeSelector:
@@ -21,7 +22,8 @@ spec:
       app.kubernetes.io/name: alertmanager
       app.kubernetes.io/part-of: kube-prometheus
       app.kubernetes.io/version: 0.29.0
-  replicas: 3
+  portName: web
+  replicas: 1
   resources:
     limits:
       cpu: 100m
@@ -29,6 +31,7 @@ spec:
     requests:
       cpu: 4m
       memory: 100Mi
+  retention: 24h
   secrets: []
   securityContext:
     fsGroup: 2000
